--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   <script src="portfolio2.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="portfolio2.css">
+   <script src="game.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <center><div class="container"><canvas id="canvas" height=400 width=500 ></canvas></div>
